# ai-irc-slack-discord-ollama-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.toml.example  discord_client.py  irc_client.py  main.py  ollama_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  slack_client.py  start_bot.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: DISCORD_SETUP.md  IRC_SETUP.md  SLACK_SETUP.md
